--- a/app_pkg/static/css/style.css
+++ b/app_pkg/static/css/style.css
@@ -1,7 +1,5 @@
-h1
-{
-    font-family: magallanes,sans-serif;
-    font-weight: 400;
-    font-style: normal
+h1 {
+  font-family: magallanes, sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
-
