--- a/app_pkg/templates/user.html
+++ b/app_pkg/templates/user.html
@@ -29,6 +29,11 @@
                 {% endif %}
                 {% if user != current_user %}
                 <p>
+                    <!--- TODO: Add button to the anchor tag in private message.
+                    <form action="{{ url_for('main.send_message', recipient=user.username) }}" method="post">
+                        {{ form.hidden_tag() }}
+                        {{ form.submit(value=_('Send Private Message'), class_='btn btn-default') }}
+                    </form> --->
                     <a href="{{ url_for('main.send_message', recipient=user.username) }}">
                         {{ _('Send private message') }}
                     </a>
